test/e2e/custom_config/values.yaml
opa:
  services:
    controller:
      url: 'https://www.openpolicyagent.org'
  bundles:
    quickstart:
      service: controller
      resource: /external-resources/bundles/helm-kubernetes-quickstart
  default_decision: /helm_kubernetes_quickstart/main
